# KoalaSoft

./: .clang-format  .dir-locals.el  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CTestConfig.cmake  CodeStructure.org  README.md  TODOs.org
KoaData/: KoaStack.cxx  (+5 more)
detectors/: CMakeLists.txt
detectors/lmdforward/: CMakeLists.txt  LmdGenLinkDef.h  LmdLinkDef.h  LmdRecoLinkDef.h  LmdToolLinkDef.h  LmdTrkLinkDef.h  PndLmdDetector.cxx  PndLmdDetector.h  PndLmdGeo.cxx  PndLmdGeo.h  PndLmdGeometryFactory.cxx  PndLmdGeometryFactory.h  PndLmdGeometryHelper.cxx  PndLmdGeometryHelper.h  geolumidetector.cxx  geolumidetector.h
detectors/lmdforward/LmdDigi/: LumiHybridHitProducer.cxx  LumiHybridHitProducer.h  PndLmdHitProducerIdeal.cxx  PndLmdHitProducerIdeal.h  PndLmdHybridHitProducer.cxx  PndLmdHybridHitProducer.h  PndLmdPixelHitProducerFast.cxx  PndLmdPixelHitProducerFast.h
detectors/lmdforward/LmdQA/: PndLmdDigiQ.cxx  PndLmdDigiQ.h  PndLmdDigiQTask.cxx  PndLmdDigiQTask.h  PndLmdQATask.cxx  PndLmdQATask.h  PndLmdTrackQ.cxx  PndLmdTrackQ.h  PndLmdTrkQTask.cxx  PndLmdTrkQTask.h
detectors/lmdforward/LmdReco/: KoaChargeWeightedPixelMapping.cxx  KoaChargeWeightedPixelMapping.h  KoaHitMergeTask.cxx  KoaHitMergeTask.h  KoaPixelClusterTask.cxx  KoaPixelClusterTask.h  KoaSimplePixelClusterFinder.cxx  KoaSimplePixelClusterFinder.h  PndLmdChargeWeightedPixelMapping.cxx  PndLmdChargeWeightedPixelMapping.h  PndLmdHitMergeTask.cxx  PndLmdHitMergeTask.h  PndLmdIdealClusterTask.cxx  PndLmdIdealClusterTask.h  PndLmdIdealRecoTask.cxx  PndLmdIdealRecoTask.h  PndLmdPixelClusterTask.cxx  PndLmdPixelClusterTask.h  PndLmdSimplePixelClusterFinder.cxx  PndLmdSimplePixelClusterFinder.h  PndSdsCell.cxx  PndSdsCell.h  PndSdsMergedHit.cxx  PndSdsMergedHit.h
detectors/lmdforward/LmdTools/: PndLmdAlignPar.cxx  PndLmdAlignPar.h  PndLmdContFact.cxx  PndLmdContFact.h
detectors/lmdforward/LmdTrack/: KoaBackProp.cxx  KoaBackProp.h  KoaComp.cxx  KoaComp.h  KoaEffi.cxx  KoaEffi.h  KoaGeaneTask.cxx  KoaGeaneTask.h  KoaIPvis.cxx  KoaIPvis.h  KoaLinFitTask.cxx  KoaLinFitTask.h  KoaLinTrack.cxx  KoaLinTrack.h  KoaPloti.cxx  KoaPloti.h  KoaTrackFinderTask.cxx  KoaTrackFinderTask.h  KoaTrksFilterTask.cxx  KoaTrksFilterTask.h  LmdEffi.cxx  LmdEffi.h  MomentumVi.cxx  MomentumVi.h  PndLinTrack.cxx  PndLinTrack.h  PndLmdBPRungeKuttaTask.cxx  PndLmdBPRungeKuttaTask.h  PndLmdGeaneTask.cxx  PndLmdGeaneTask.h  PndLmdIdealFitTask.cxx  PndLmdIdealFitTask.h  PndLmdKalmanTask.cxx  PndLmdKalmanTask.h  PndLmdLinFitTask.cxx  PndLmdLinFitTask.h  PndLmdLineTask.cxx  PndLmdLineTask.h  PndLmdNoiseTrkSuppressionTask.cxx  PndLmdNoiseTrkSuppressionTask.h  (+8 more)
detectors/recoil/: CMakeLists.txt
detectors/recoil/full/: Koaladetector.cxx  Koaladetector.h  geokoaladetector.cxx  geokoaladetector.h
detectors/scint-forward/: CMakeLists.txt  KoaFwdDigitization.cxx  KoaFwdDigitizationPar.h  KoaFwdGeoPar.h
detectors/scintforward/: CMakeLists.txt  KoaFwd.cxx  KoaFwd.h  KoaFwdContFact.h  KoaFwdDigi.h  KoaFwdDigitization.cxx  KoaFwdDigitization.h  KoaFwdDigitizationPar.cxx  KoaFwdDigitizationPar.h  KoaFwdGeo.cxx  KoaFwdGeo.h  KoaFwdGeoPar.cxx  KoaFwdPoint.cxx  KoaFwdPoint.h  ScintFwdLinkDef.h
detectors/sds/: CMakeLists.txt  PndPersistencyTask.cxx  PndPersistencyTask.h  PndSdsTask.cxx  PndSdsTask.h  SdsLinkDef.h  SdsRecoLinkDef.h
macro/lmd/: CMakeLists.txt  Koa5IP.C  KoaEff.C  KoaPixel0SimDPM.C  KoaPixel0SimDPMDirect.C  KoaPixel1Digi.C  KoaPixel2Reco.C  KoaPixel3Finder.C  KoaPixel4Fitter.C  KoaPixel5BackProp.C  KoaPixel6Compare.C  KoaVis.C  LmdEff.C  MomentumVisi.C
(+1011 files in other folders)
